dist/1.0/bin/sample/retrieveUnpackaged/objects/ROD_Dictionary__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Reason of Delay dictionary</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subgroup__c</fullName>
        <label>Subgroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Reason of Delay Dictionary</label>
</CustomObject>